# OraSRS-protocol

./: .eslintrc.json  .gitignore  ALPHA_TESTING.md  APPLICATION_GUIDE.md  CHAINMAKER_CONTRACT_SECURITY_REPORT.md  CHAINMAKER_CONTRACT_SUMMARY.md  CHAINMAKER_DEPLOYMENT_PLAN.md  CHAINMAKER_MIGRATION_GUIDE.md  CHAINMAKER_SECURITY_TESTING.md  CHANGELOG.md  CITATION.cff  CLIENT_IMPLEMENTATION_GUIDE.md  CLIENT_IMPLEMENTATION_GUIDE_UPDATED.md  CLIENT_README.md  CONSENSUS_PARAMETERS_WHITEPAPER.md  Dockerfile  Dockerfile.client  Dockerfile.client.secure  Dockerfile.test  EGRESS_PROTECTION_DESIGN.md  FAUCET_DEPLOY_GUIDE.md  HARDHAT_SERVICE_GUIDE.md  HYBRID_L2_ARCHITECTURE.md  INSTALL_GUIDE.md  IOT_SHIELD.md  NOTICE  OPENWRT_CLIENT_GUIDE.md  OPENWRT_INSTALLATION_GUIDE.md  OPENWRT_T0_T3_MECHANISMS.md  ORASRS_DEPLOYMENT_SUMMARY.md  OraSRS_v2.0_Framework_Design.md  OraSRS_v2.0_Threat_Intelligence_Protocol.md  PERFORMANCE_CHAPTER_CACHE_HIT.md  PERFORMANCE_TEST_GUIDE.md  PUBLIC_CONNECTION_TEST_REPORT.md  PoC_DEFENSE_REPORT.md  README.md  README_zh-CN.md  REBRANDING_ANNOUNCEMENT.md  RELEASE_NOTES_v2.1.0.md  (+165 more)
orasrs-lite-client/: Cargo.toml  Cargo_tauri.toml  IMPLEMENTATION.md  README.md  build-release.sh  index.html  nginx-integration-example.conf  package-lock.json  package.json  tauri.conf.json  vite.config.js
orasrs-lite-client/benchmarks/: 10k-ip-test.js  latency-check.sh
orasrs-lite-client/config/: orasrs.config.json
orasrs-lite-client/logs/hybrid-cloud-test-results/: performance-test-sample.json
orasrs-lite-client/openwrt/: Makefile
orasrs-lite-client/openwrt/etc/config/: orasrs
orasrs-lite-client/openwrt/etc/init.d/: orasrs
orasrs-lite-client/releases/orasrs-lite-client-v2.0.0-20251208/: README.md  RELEASE_NOTES.md  client-config.json  install.sh
orasrs-lite-client/scripts/: install.sh
orasrs-lite-client/src/: lib.rs  main.rs
orasrs-lite-client/src-tauri/: Cargo.toml  tauri.conf.json
orasrs-lite-client/src-tauri/src/: log_annotation.rs  main.rs  nginx_integration.rs
orasrs-lite-client/tests/unit/: network.test.js
(+630 files in other folders)
