[package]
name = "orasrs-core-sdk"
version = "0.1.0"
edition = "2021"

# OraSRS 核心SDK - 通用安全插件
# 实现链上订阅 -> 本地同步 -> 内核阻断 的最小闭环

[lib]
crate-type = ["cdylib"] # 编译成动态链接库 (.dll / .so)

[dependencies]
# Web3连接相关
web3 = "0.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据结构相关
roaring = "0.10"  # Roaring Bitmaps 用于高效存储黑名单
bloomfish = "0.4" # 布隆过滤器

# 系统相关
sysinfo = "0.29"
log = "0.4"
env_logger = "0.10"

# 网络相关
reqwest = { version = "0.12", features = ["json"] }
websocket = "0.26"

# 本地阻断相关
nix = "0.27"  # 用于Linux系统调用
windows = { version = "0.48", features = ["Win32_Networking_WinSock", "Win32_Foundation"] } # Windows WFP

# 其他必需的依赖
ethers = { version = "2.0", features = ["abigen"] }
anyhow = "1.0"
tokio-test = "0.4"

# P2P网络连接相关
tokio-util = "0.7"
futures = "0.3"

[features]
default = ["full-node"]
full-node = []  # 全节点模式（可选）
lite-mode = ["incremental-update", "ttl-expiration", "silent-mode"]
incremental-update = []  # 增量更新
ttl-expiration = []      # TTL过期淘汰
silent-mode = []         # 静默模式