[package]
name = "orasrs-lite-client"
version = "2.0.0"
description = "OraSRS Lite Client - Lightweight Threat Intelligence Client"
authors = ["OraSRS Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
tauri-plugin-dialog = "2.0.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = "1.3"
futures-util = "0.3"
async-stream = "0.3"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
anyhow = "1.0"
parking_lot = "0.12"
regex = "1.0"

[build-dependencies]
tauri-build = { version = "1.0", features = ["codegen"] }